# mimic

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  mimic.config.example.json  pyproject.toml  requirements.txt
assets/: Mimic.icns
docs/: ARCHITECTURE.md  TESTING.md
mimic/: server.py
mimic/ios/: __init__.py  agent.js  device.py  tel.js  viewer.py
scripts/: build_app.sh  install_frida_daemon.sh  install_gadget_bypass.sh  mitm.sh  setup.sh
skill/mimic-ios-control/: SKILL.md
tools/: frida-entitlements.plist  mkvideo.swift
tools/goios/: selfIdentity.plist
