[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mimic-mcp"
version = "0.1.0"
description = "Token-efficient, human-like iOS control over MCP (Frida + go-ios)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["mcp", "ios", "frida", "automation", "accessibility"]

# The server speaks JSON-RPC over stdio directly — no MCP SDK. The only runtime
# dependency is Frida, which controls the device over USB.
dependencies = [
    "frida>=16.0.0",
]

[project.optional-dependencies]
# The live screen viewer (mimic/ios/viewer.py) is a native macOS Cocoa window built
# with Pillow + PyObjC. The MCP server itself stays Frida-only — install this extra
# only for the viewer. (macOS ships a broken system Tk 8.5, so the viewer uses AppKit.)
viewer = ["pillow>=9.2", "pyobjc-framework-Cocoa>=9.0; sys_platform == 'darwin'"]

[project.scripts]
mimic-mcp = "mimic.server:main"
mimic-viewer = "mimic.ios.viewer:main"

[tool.setuptools]
packages = ["mimic", "mimic.ios"]

[tool.setuptools.package-data]
# Ship the injected JS + viewer app icon alongside the Python.
"mimic.ios" = ["*.js", "*.png"]
